--- a/sigmaCabs/app/views/dispatches/vehiclePerformance.html
+++ b/sigmaCabs/app/views/dispatches/vehiclePerformance.html
@@ -23,7 +23,7 @@
         <span title="Promoting Partner" class="ellipsisText">Promoting Partner</span>
     </div>
     <div class="fieldContainer relative right">
-        <label class="labelCompact" title="Registration Number">Reg. No</label>
+        <label class="labelCompact" title="Registration Number">Registration No</label>
         <span class="ellipsisText" title="AP 09 9999">AP 09 9999</span>
     </div>
     <p class="clear"/>
