--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -2,7 +2,7 @@
     <legend class="searchbox-border">Current Day Bookings</legend>
     <div class="header-display">
         <!-- <span class="" title="{{vehicleMainDetails.details.homeLocation}}">{{vehicleMainDetails.details.homeLocation}}</span> -->
-        <span title="Login Time"><strong>LT:</strong></span>
+        <span title="Login Time"><strong>LiT:</strong></span>
         <span class="ellipsisText" title="{{currentDayStatistics.loginTime}}"><strong>{{currentDayStatistics.loginTime}}</strong></span>
 
         <span title="Expected Logout Time"><strong>ELoT:</strong></span>
@@ -21,41 +21,49 @@
     <div style="height:200px;margin-right: 20px;width:72%;" id="customerBookingGridID" class="bookingHistoryGrid left">
     	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:195px;"></div>
     </div>
-    <div style="width:24%;margin-top: 20px;" class="left">
+    <div style="width:24%;margin-top: 5px;" class="left">
     	<div class="fieldContainer relative clearBoth">
-            <label class="labelCompact" title="Day Collection">D.Col</label>
+            <label class="labelCompact" title="Day Collection">Day Coll:</label>
             <span>{{currentDayStatistics.dayCollection}}</span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact" title="Total Login Hours">TLH</label>
+            <label class="labelCompact" title="Total Login Hours">T. Login Hrs:</label>
             <span>{{currentDayStatistics.totalLoginTime}}</span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact" title="Total Break Time">TBT</label>
+            <label class="labelCompact" title="Total Break Time">T. Break Tm:</label>
             <span>{{currentDayStatistics.totalBreakTime}}</span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact" title="Working Hours">WH</label>
+            <label class="labelCompact" title="Working Hours">Working Hrs:</label>
             <span>{{currentDayStatistics.totalWorkingTime}}</span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <label class="labelCompact" title="Performance">Perf..</label>
+            <label class="labelCompact" title="Performance">Performance:</label>
             <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:{{currentDayStatistics.performance}};"></span>
         </div>
         <div class="fieldContainer relative clearBoth">
-            <span title="Total Booking"><strong>TB:&nbsp;</strong></span>
+            <span title="Total Booking"><strong>T.Bookings:&nbsp;</strong></span>
             <span class="margin-right10"><strong>{{currentDayStatistics.totalBookings}}</strong></span>
-
+        </div>
+        <div class="fieldContainer relative left" style="width:75px;">
             <span title="Successful Booking"><strong>SB:&nbsp;</strong></span>
             <span class="margin-right10"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
         </div>
-        <div class="fieldContainer relative clearBoth">
+        <div class="fieldContainer relative right" style="width:75px">
+            <span title="Roadside Booking"><strong>Ro.B:&nbsp;</strong></span>
+            <span class="margin-right10"><strong>{{currentDayStatistics.completedBookings}}</strong></span>
+        </div>
+        <p class="clear"/>
+        <div class="fieldContainer relative left" style="width:75px;">
             <span title="Rejected Booking"><strong>RB:&nbsp;</strong></span>
             <span class="margin-right10"><strong>{{currentDayStatistics.rejectedBookings}}</strong></span>
-
+        </div>
+        <div class="fieldContainer relative right" style="width:75px">
             <span title="Cancelled Booking"><strong>CB:&nbsp;</strong></span>
             <span class="margin-right10"><strong>{{currentDayStatistics.canceledBookings}}</strong></span>
         </div>
+        <p class="clear"/>
     </div>
     <p class="clear" />
 </fieldset>
@@ -82,8 +90,8 @@
                     <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:orange;"></span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
-                    <label class="labelCompact" title="Vehicle Complaints Count">V.Comp.</label>
-                    <span>1</span>
+                    <label class="labelCompact" title="Average Login Hours">Avg.Login</label>
+                    <span>32</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px;">
@@ -96,8 +104,8 @@
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Average Login Hours">Avg.Login</label>
-                    <span>32</span>
+                    <label class="labelCompact" title="Vehicle Complaints Count">V.Comp.</label>
+                    <span>1</span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Driver Complaints Count">D.Comp.</label>
