--- a/sigmaCabs/app/views/dispatches/lastMonthHistory.html
+++ b/sigmaCabs/app/views/dispatches/lastMonthHistory.html
@@ -7,63 +7,53 @@
                 <h4 style="margin: 5px;font-size: 12px;font-weight: bold;">Vehicle and Driver Details</h4>
                 <div class="fieldContainer relative left" style="width:180px;">
                     <label class="labelCompact" title="Day Average">Day Avg.</label>
-                    <span>1500</span>
+                    <span>{{lastMonthStatistics.vehicle.dayAverage}}</span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Till now Reached">Reached</label>
-                    <span class="left margin-right10">1400</span>
-                    <span class="left" style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:green;"></span>
+                    <span class="left margin-right10">{{lastMonthStatistics.vehicle.reached}}</span>
+                    <span class="left" style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:{{lastMonthStatistics.vehicle.performance}};"></span>
                     <p class="clear"/>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px;">
-                    <label class="labelCompact" title="Vehicle Performance">Perf..</label>
-                    <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:orange;"></span>
+                    <label class="labelCompact" title="Driver Performance">Perf..</label>
+                    <span style="height:20px;display:inline-block;width:40px;border-radius:5px;background-color:{{lastMonthStatistics.driver.performance}};"></span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Average Login Hours">Avg.Login</label>
-                    <span>32</span>
+                    <span>{{lastMonthStatistics.driver.avgLoginHoursText}}</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px;">
                     <label class="labelCompact" title="Total Days">T.Days</label>
-                    <span>20</span>
+                    <span>{{lastMonthStatistics.driver.totalDays}}</span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Working Days">W.Days</label>
-                    <span>18</span>
+                    <span>{{lastMonthStatistics.driver.workingDays}}</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px;">
                     <label class="labelCompact" title="Vehicle Complaints Count">V.Comp.</label>
-                    <span>1</span>
+                    <span>{{lastMonthStatistics.vehicle.complaintsCount}}</span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Driver Complaints Count">D.Comp.</label>
-                    <span>1</span>
+                    <span>{{lastMonthStatistics.driver.complaintsCount}}</span>
                 </div>
                 <p class="clear"/>
                 <div class="fieldContainer relative left" style="width:180px">
                     <label class="labelCompact" title="Vehicle Rating">V.Rating</label>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <!-- <span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
+                    <span ng-repeat="j in lastMonthStatistics.vehicle.aRating">
                         <span class="glyphicon {{j.cls}}"></span>
-                    </span> -->
+                    </span>
                 </div>
                 <div class="fieldContainer relative right" style="width:180px">
                     <label class="labelCompact" title="Driver Rating">D.Rating</label>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <!-- <span ng-repeat="j in vehicleDetailsData.vehicle.aRating">
+                    <span ng-repeat="j in lastMonthStatistics.driver.aRating">
                         <span class="glyphicon {{j.cls}}"></span>
-                    </span> -->
+                    </span>
                 </div>
                 <p class="clear"/>
             </div>
@@ -71,20 +61,20 @@
                 <h4 style="margin: 5px;font-size: 12px;font-weight: bold;">Booking Details</h4>
                 <div class="fieldContainer relative" style="width:180px;">
                     <label class="labelCompact" title="Total Bookings">T.Bkngs</label>
-                    <span>150</span>
+                    <span>{{lastMonthStatistics.booking.total}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <span title="Successful Bookings">SB: </span>
-                    <span class="margin-right10">145</span>
+                    <span class="margin-right10">{{lastMonthStatistics.booking.completed}}</span>
 
                     <span title="Rejected Bookings">RB: </span>
-                    <span class="margin-right10">2</span>
+                    <span class="margin-right10">{{lastMonthStatistics.booking.rejected}}</span>
 
                     <span title="Roadside Bookings">Ro.B: </span>
-                    <span class="margin-right10">2</span>
+                    <span class="margin-right10">{{lastMonthStatistics.booking.roadside}}</span>
 
                     <span title="Cancelled Bookings">CB: </span>
-                    <span class="margin-right10">1</span>
+                    <span class="margin-right10">{{lastMonthStatistics.booking.cancelled}}</span>
                 </div>
             </div>
         </div>
@@ -94,5 +84,5 @@
         <p class="clear"/>
     </div>
 </fieldset>
-<div class="left" data-ng-include="vehiclePerformance" style="width:46.3%;"></div>
+<div class="left" data-ng-include="vehiclePerformance" style="width:49.3%;"></div>
 <p class="clear" />
