increased width of count field

--- a/sigmaCabs/app/styles/main.scss
+++ b/sigmaCabs/app/styles/main.scss
@@ -885,7 +885,7 @@ textFieldCompact[disabled] .textFieldCompact {
 
 .bookingCountInFilter {
   border:1px solid #999;
-  width: 30px; height: 20px;
+  height: 20px;
   color: #000;
   text-align: center;
 }
